--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_navigation">NavigationActivity</string>
     <string name="protege_todo">Protege ToDo</string>
+    <string name="search_for_notes">Search for notes...</string>
 </resources>
