--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Protege</string>
     <string name="add_new_note">Add new note</string>
     <string name="mwendzi_s_protege">Mwendzi\'s Protégé</string>
-    <string name="add_note">Add New Note</string>
+    <string name="add_note"></string>
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="title_activity_todo_navigation">TodoNavigationActivity</string>
@@ -16,4 +16,8 @@
     <string name="search_for_notes">Search for notes…</string>
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
+    <string name="search_note">Search Note</string>
+    <string name="greeting_afternoon">Good Afternoon🕑!!</string>
+    <string name="greeting_evening">Good Evening🌙🌃!!</string>
+    <string name="greeting_morning">Good Morning☀️!!</string>
 </resources>
