--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,5 @@
     <string name="greeting_afternoon">Good Afternoon🕑!!</string>
     <string name="greeting_evening">Good Evening🌙🌃!!</string>
     <string name="greeting_morning">Good Morning☀️!!</string>
+    <string name="queryHint">Search for Note…</string>
 </resources>
