--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="search_note">Search Note</string>
     <string name="mwendzi_s_protege">Mwendzi\'s Protégé</string>
-    <string name="greeting_afternoon">Good Afternoon🕑!!</string>
-    <string name="greeting_evening">Good Evening🌙🌃!!</string>
-    <string name="greeting_morning">Good Morning☀️!!</string>
+    <string name="greeting_afternoon">Good Afternoon Ian!</string>
+    <string name="greeting_evening">Good Evening Ian!</string>
+    <string name="greeting_morning">Good Morning Ian!</string>
     <string name="queryHint">Search for Note…</string>
 </resources>
