--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,24 @@
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="search_note">Search Note</string>
-    <string name="greeting_afternoon">Good Afternoon🕑!!</string>
-    <string name="greeting_evening">Good Evening🌙🌃!!</string>
-    <string name="greeting_morning">Good Morning☀️!!</string>
+    <string name="greeting_afternoon">Good Afternoon Ian!</string>
+    <string name="greeting_evening">Good Evening Ian!</string>
+    <string name="greeting_morning">Good Morning Ian!</string>
     <string name="queryHint">Search for Note…</string>
+    <string name="beryl">It\'s Beryl\'s birthday!❤️❤️</string>
+    <string name="odriya">It\'s Odriya\'s birthday!😝❤️\️</string>
+    <string name="christine">It\'s Christine\'s birthday!❤️</string>
+    <string name="stephanie">It\'s Stephanie\'s birthday!❤️</string>
+    <string name="ann">It\'s Ann\'s birthday!❤️❤️</string>
+    <string name="mine">Happy Birthday Ian!❤️❤️</string>
+    <string name="clarissa">It\'s Clarissa\'s birthday!❤️</string>
+    <string name="aiyana">It\'s Aiyana\'s birthday!❤️</string>
+    <string name="megan">It\'s Joy\'s birthday!❤️</string>
+    <string name="kimberly">It\'s Kimberly\'s birthday!❤️</string>
+    <string name="seanice">It\'s Seanice\'s birthday!❤️</string>
+    <string name="amandine">It\'s Amandine\'s birthday!❤️</string>
+    <string name="lashley">It\'s Lashley\'s birthday!❤️</string>
+    <string name="simone">It\'s Simone\'s birthday!❤️</string>
+    <string name="mum">It\'s Mum\'s birthday!❤️❤️❤️</string>
+    <string name="kailetu">It\'s Kailetu\'s birthday!❤️</string>
 </resources>
