--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -6,4 +6,5 @@
     <string name="greeting_evening">Good Evening Ian!</string>
     <string name="greeting_morning">Good Morning Ian!</string>
     <string name="queryHint">Search for Note…</string>
+    <string name="relationship_with">Relationship with...</string>
 </resources>
