A loooot of updates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,5 @@
 
     <string name="menu_password">Passwords</string>
     <string name="menu_trash">Trash</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_birthdays">Birthdays</string>
 </resources>
